force-app/main/default/objects/Organization_Owners__c/Organization_Owners__c.object-meta.xml
<CustomObject>
    <label>Owner</label>
    <nameField>
        <displayFormat>Own-{00000}</displayFormat>
        <label>Ownership ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Owners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>