force-app/main/default/objects/Organization_Owners__c/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <label>Owner Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Partnership Owner</fullName>
            </value>
            <value>
                <fullName>Contributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>